--- a/src/Web2/Web2/Shared/MainLayout.razor.css
+++ b/src/Web2/Web2/Shared/MainLayout.razor.css
@@ -4,22 +4,22 @@
     flex-direction: column;
 }
 .btn-primary {
-    background-color: #f7f7f7; /* Цвет фона */
-    color: black; /* Цвет текста */
-    border: none; /* Удаление границы */
-    padding: 5px 10px; /* Внутренние отступы */
-    text-align: center; /* Выравнивание текста */
-    text-decoration: none; /* Удаление подчеркивания */
-    display: inline-block; /* Отображение кнопки в строке */
-    font-size: 16px; /* Размер шрифта */
-    margin: 2px 1px; /* Внешние отступы */
-    cursor: pointer; /* Изменение курсора при наведении */
-    border-radius: 10px; /* Скругление углов */
-    transition: background-color 0.3s ease; /* Плавное изменение цвета фона */
+    background-color: #f7f7f7; 
+    color: black;
+    border: none; 
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 2px 1px;
+    cursor: pointer; 
+    border-radius: 10px; 
+    transition: background-color 0.3s ease; 
 }
 
     .btn-primary:hover {
-        background-color: #808080; /* Изменение цвета фона при наведении */
+        background-color: #808080; 
         color: white;
         border: 2px solid #494949
     }
